LDA Created from Cassandra finished